Added dynamic tree map

--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -3,7 +3,7 @@ $white: #fff;
 $c1: #130f40;
 $c2: #847aff;
 $c3: #ff9f43;
-$c4: rgb(53, 31, 152);
+$c4: #351f98;
 $c5: #00d2d3;
 $c6: #0c2461;
 $c7: #1e3799;
